--- a/.github/workflows/docAction.yml
+++ b/.github/workflows/docAction.yml
@@ -9,22 +9,15 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
-        with:
-          persist-credentials: false
 
       - name: Install and Build 🔧
         run: |
           npm install
-          npm run build
-
-      - name: Install SSH Client 🔑
-        uses: webfactory/ssh-agent@v0.2.0
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+          npm run docs
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3-test
         with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: master
           FOLDER: docs
-          SSH: true
