--- a/.github/workflows/docAction.yml
+++ b/.github/workflows/docAction.yml
@@ -4,11 +4,13 @@ on:
     branches:
       - master
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - name: Install and Build 🔧
         run: |
@@ -16,7 +18,7 @@ jobs:
           npm run docs
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3-test
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: master
